@@ -372,16 +372,16 @@
 		</div>
 		<div id="divInternalExtras" style="DISPLAY: none">
             <br />
-             <span style = 'font-size:larger'>Query String (For example: value_1=1&value_2=2)</span></br>              
+             <span style = 'font-size:larger' fckLang="DlgLnkQSExample">Query String (For example: value_1=1&value_2=2)</span></br>              
              <input id="txtDokuWikiQS" style="WIDTH: 100%; font-size:larger"  type="text"  />
             <br />
                 <!-- Get list of page anchors -->
                 <table>
                 <tr><td>
-                <span style = 'font-size:larger'> Create page anchors from Dokuwiki headers</span>
+                <span style = 'font-size:larger' fckLang="DlgLnkCreateAnchors"> Create page anchors from Dokuwiki headers</span>
                 <tr><td>
                 <form name='headings'>
-                  <input type="button" value="Get Headings" style = 'font-size:larger' onclick="getHeaders();" />&nbsp;&nbsp;
+                  <input type="button" value="Get Headings"  fckLang="DlgLnkGetHeaders" style = 'font-size:larger' onclick="getHeaders();" />&nbsp;&nbsp;
                  <Select name = 'anchors' onchange="anchorOption.selected(this)" style = 'font-size:larger'>  
                  </select>
                 </form>
