@@ -254,6 +254,13 @@ DlgLnkEMailSubject	: "Message Subject",
 DlgLnkEMailBody		: "Message Body",
 DlgLnkUpload		: "Upload",
 DlgLnkBtnUpload		: "Send it to the Server",
+DlgLnkCreateAnchors: "Create Page Anchors from Dokuwiki Headers",
+DlgLnkQSExample:   "Query String (for example: value_1=1&value_2=2)",
+DlgLnkGetHeaders: "Get Headers",
+DlgLnkGetHeaders: "Get Headers",
+DlgLnkCancelHeaders: ". . .cancel",
+DlgLnkHeadersMenuTitle: "Headings Menu",
+DlgLnkNoHeadersFound: "No Headings Found",
 
 DlgLnkTarget		: "Target",
 DlgLnkTargetFrame	: "<frame>",
